--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.7.1",
     "jquery.repeater": "^1.2.1",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "quill": "^2.0.3",
     "select2": "^4.1.0-rc.0",
     "typeahead.js": "^0.11.1",
