--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pusher-js": "^8.4.0-rc2",
     "quill": "^2.0.3",
     "select2": "^4.1.0-rc.0",
+    "sweetalert2": "^11.15.10",
     "typeahead.js": "^0.11.1",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
