--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flatpickr": "^4.6.13",
     "formvalidation": "^0.6.2-dev",
     "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.1",
     "jquery.repeater": "^1.2.1",
     "moment": "^2.30.1",
     "pinia": "^2.3.0",
@@ -42,6 +43,7 @@
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-date-time-picker": "^2.8.3",
+    "vue3-datepicker": "^0.4.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
